# Plum---Health-Insurance-Claims-Processing-System

./: .gitignore  README.md  plan.md
Employee Health Benefits & Insurance Platform _ Plum_files/: 3247747961979891  63413ad4dec8a91fe53f4fb0_652d31f3dc22d7b4ee708e44_65c4711b1cbe7a5b3878220b_clarity_script-9.7.3.js  688076dc8031ab88cdf28179_image place Holder (2).avif  6886f96a58e5a5df0ff262b9_Frame 15.avif  6886f96a58e5a5df0ff262bd_Frame 16 (1).avif  (+63 more)
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260626_0001_create_policy_tables.py  20260627_0002_create_claim_intake_tables.py  20260627_0003_create_policy_knowledge_chunks.py  20260628_0004_update_embedding_dimensions.py
backend/app/: main.py
backend/app/api/: claims.py  eval.py  health.py
backend/app/core/: config.py  context.py
backend/app/db/: models.py  session.py
backend/app/models/: __init__.py  contracts.py  policy.py
backend/app/services/: claim_intake_repository.py  claims_processor.py  document_intake.py  extraction_pipeline.py  policy_loader.py  policy_retriever.py
backend/app/services/rules/: __init__.py  coverage_rules.py  document_rules.py  financial_rules.py  fraud_rules.py  gate_rules.py
backend/plum_claims_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_acceptance_cases.py  test_claims_contract.py  test_document_intake.py  test_eval_contract.py  test_extraction_pipeline.py  test_health.py  test_policy_loader.py  test_policy_retriever.py  test_rule_engine.py
(+12 files in other folders)
